--- a/DAL/Web/Views/Students/Profile.cshtml
+++ b/DAL/Web/Views/Students/Profile.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <img id="imgPicture" src="@Model.PictureFileName"
-                     style="height:64px; width:64px; border-radius:7px 7px 0 7px;" />
+                     style="height:64px; width:64px; border-radius:7px 0px 7px 7px;" />
                 <input asp-for="PictureFile" type="file"
                        style="position: absolute; top:0px;height:64px; width:64px;" />
             </div>
