--- a/DAL/Web/Views/Account/Login.cshtml
+++ b/DAL/Web/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Login" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -31,7 +31,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input  type="submit" value="Login" class="btn btn-primary">
             </div>
         </form>
     </div>
