--- a/DAL/Web/Views/Students/AttendExam.cshtml
+++ b/DAL/Web/Views/Students/AttendExam.cshtml
@@ -12,28 +12,28 @@
 
 @if (Model.Message == "")
 {
-    <form asp-action="AttendExam" asp-controller="Students" method="post">
-        <input type="hidden" asp-for="StudentId" />
+<form asp-action="AttendExam" asp-controller="Students" method="post">
+    <input type="hidden" asp-for="StudentId" />
+    @for (var i = 0; i < Model.QnAs.Count(); i++)
+    {
+        <input type="hidden" asp-for="@Model.QnAs[i].Id" />
+        <input type="hidden" asp-for="@Model.QnAs[i].ExamsId" />
         <ul>
-            @for (var i = 0; i < Model.QnAs.Count(); i++)
-            {
-                <input type="hidden" asp-for="@Model.QnAs[i].Id" />
-                <input type="hidden" asp-for="@Model.QnAs[i].ExamsId" />
-                <li>
-                    <label for="@Model.QnAs[i].Question">@Model.QnAs[i].Question</label>
-                </li>
-                <li>
-                    <select asp-for="@Model.QnAs[i].SelectedAnswer" class="form-control">
-                        <option value="1">@Model.QnAs[i].Option1</option>
-                        <option value="2">@Model.QnAs[i].Option2</option>
-                        <option value="3">@Model.QnAs[i].Option3</option>
-                        <option value="4">@Model.QnAs[i].Option4</option>
-                    </select>
-                </li>
-            }
+            <li type="disc">
+                <label for="@Model.QnAs[i].Question">@Model.QnAs[i].Question</label>
+            </li>
+            <li type="none">
+                <select asp-for="@Model.QnAs[i].SelectedAnswer" class="form-control">
+                    <option value="1">@Model.QnAs[i].Option1</option>
+                    <option value="2">@Model.QnAs[i].Option2</option>
+                    <option value="3">@Model.QnAs[i].Option3</option>
+                    <option value="4">@Model.QnAs[i].Option4</option>
+                </select>
+            </li>
         </ul>
-        <button type="submit" name="action">Submit</button>
-    </form>
+    }
+    <button type="submit" name="action">Submit</button>
+</form>
 }
 else 
 {
