--- a/DAL/Web/Views/Students/Profile.cshtml
+++ b/DAL/Web/Views/Students/Profile.cshtml
@@ -15,7 +15,7 @@
                 <img id="imgPicture" src="@Model.PictureFileName"
                      style="height:64px; width:64px; border-radius:7px 0px 7px 7px;" />
                 <input asp-for="PictureFile" type="file"
-                       style="position: absolute; top:0px;height:64px; width:64px;" />
+                       style="position: relative;"/>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
