--- a/DAL/Web/Views/Groups/Create.cshtml
+++ b/DAL/Web/Views/Groups/Create.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h4>Create new grades or groups</h4>
 
-<h4>GroupViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
