--- a/DAL/Web/Views/QnAs/Create.cshtml
+++ b/DAL/Web/Views/QnAs/Create.cshtml
@@ -6,6 +6,9 @@
 
 }
 
+<h4>Create new questions and answers</h4>
+
+
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
