--- a/DAL/Web/Views/QnAs/Index.cshtml
+++ b/DAL/Web/Views/QnAs/Index.cshtml
@@ -6,15 +6,23 @@
 
 }
 
-<h1>Exam Papers</h1>
-
+<h4>Exam Papers</h4>
+<hr />
 <div>
     <br />
     <a asp-action="Create" asp-controller="QnAs" class="btn btn-primary">Create</a>
+    <hr />
     <div>
         <table id="qnaGrid"
                class="table table-stiped table-bordered dt-responsive nowrap"
-               width="100%" cellspacing="0">
+               width="100%" cellspacing="0" style="table-layout:auto;">
+            <colgroup>
+                <col style="width:40%" />
+                <col style="width:15%" />
+                <col style="width:15%" />
+                <col style="width:15%" />
+                <col style="width:15%" />
+            </colgroup>
             <thead>
                 <tr>
                     <th>Questions</th>
