--- a/DAL/Web/Views/Students/Profile.cshtml
+++ b/DAL/Web/Views/Students/Profile.cshtml
@@ -6,6 +6,8 @@
 
 }
 
+<h4>Profile</h4>
+<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Profile" method="post" enctype="multipart/form-data">
@@ -13,9 +15,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <img id="imgPicture" src="@Model.PictureFileName"
-                     style="height:64px; width:64px; border-radius:7px 0px 7px 7px;" />
+                     style="position: relative; background-color: transparent; 
+                        height: 64px; width: 64px; border-radius: 7px 0px 7px 7px;" />
                 <input asp-for="PictureFile" type="file"
-                       style="position: relative;"/>
+                       style="position: absolute; top: 0; left: 15px; height: 64px; 
+                        width: 64px; border-radius: 7px 0px 7px 7px; background-color: transparent; 
+                        border: 0px; outline: none; -webkit-box-shadow: none; -moz-box-shadow: none; 
+                        box-shadow: none; color: transparent; cursor: pointer; opacity:0;"/>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
