--- a/DAL/Web/Views/Groups/Details.cshtml
+++ b/DAL/Web/Views/Groups/Details.cshtml
@@ -19,7 +19,7 @@
                 <input type="hidden" asp-for="@Model.StudentCheckList[i].Id"/>
                 <input type="hidden" asp-for="@Model.StudentCheckList[i].Name"/>
         }
-    <button class="btn btn-outline-dark" type="submit" name="action">Update</button>
+    <button class="btn btn-outline-dark mr-auto" type="submit" name="action">Update</button>
 </form>
 
 <hr />
