--- a/DAL/Web/Views/QnAs/Index.cshtml
+++ b/DAL/Web/Views/QnAs/Index.cshtml
@@ -14,7 +14,7 @@
     <hr />
     <div>
         <table id="qnaGrid"
-               class="table table-stiped table-bordered dt-responsive nowrap"
+               class="table table-hover table-bordered dt-responsive nowrap"
                width="100%" cellspacing="0" style="table-layout:auto;">
             <colgroup>
                 <col style="width:40%" />
@@ -23,7 +23,7 @@
                 <col style="width:15%" />
                 <col style="width:15%" />
             </colgroup>
-            <thead>
+            <thead class="thead-light">
                 <tr>
                     <th>Questions</th>
                     <th>Option 1</th>
