--- a/DAL/Web/Views/Students/ViewResult.cshtml
+++ b/DAL/Web/Views/Students/ViewResult.cshtml
@@ -9,6 +9,7 @@
 <h4>Exam Results</h4>
 <hr />
 <div>
+    <p class="text-center h3">Exam Report</p>
     <br />
     <div>
         <table id="resultGrid"
@@ -37,6 +38,8 @@
         </table>
     </div>
 </div>
+<br />
+<hr />
 <div>
-    <a asp-action="Profile">Profile</a>
+    <a asp-action="Profile" class="btn btn-outline-info">Profile</a>
 </div>
