--- a/DAL/Web/Views/Users/Index.cshtml
+++ b/DAL/Web/Views/Users/Index.cshtml
@@ -12,9 +12,9 @@
     <hr />
     <div>
         <table id="userGrid"
-               class="table table-stiped table-bordered dt-responsive nowrap"
+               class="table table-hover table-bordered dt-responsive nowrap"
                width="70%" cellspacing="0">
-            <thead>
+            <thead class="thead-light">
                 <tr>
                     <th>Name</th>
                     <th>Username</th>
