--- a/DAL/Web/Views/Students/Profile.cshtml
+++ b/DAL/Web/Views/Students/Profile.cshtml
@@ -48,7 +48,7 @@
                 <span asp-validation-for="CVFile" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Update" class="btn btn-primary" />
+                <input type="submit" value="Update" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
